--- a/warble/index.html
+++ b/warble/index.html
@@ -21,10 +21,11 @@
 
   <div class="nav-scroller py-1 mb-2" >
     <nav class="nav d-flex">
-       <a href="https://danielwnewman.github.io/home" class= "p-2 text-muted">Home</a>
+      <a href="https://danielwnewman.github.io/home" class= "p-2 text-muted">Home</a>
        <a href="https://danielwnewman.github.io/home/warble" class= "p-2 text-muted">Café Warble</a>
       <a href="https://danielwnewman.github.io/home/links" class= "p-2 text-muted">Index</a>
       <a href="https://danielwnewman.github.io/home/pictures" class= "p-2 text-muted">Pictures</a>
+      <a href="https://danielwnewman.github.io/home/music" class= "p-2 text-muted">Music</a>
       <a href="https://danielwnewman.github.io/home/archive" class= "p-2 text-muted">Archive</a>
     </nav>
   </div>
