--- a/about/index.html
+++ b/about/index.html
@@ -34,7 +34,7 @@
   <div class="container" style="width:450px;">
 
     <div class="card" style="margin:20px 20% 24px 20%;">
-    <img class="card-img-top" src="https://github.com/DanielWNewman/home/blob/master/about/profile.jpg" alt="image" style="width:100%">
+    <img class="card-img-top" src="https://github.com/DanielWNewman/home/blob/master/about/profile.jpg?raw=true" alt="image" style="width:100%">
   <div class="card-body">
     <h1>About Me</h1>
     <ul>
